# fadingdisplays

./: .gitignore  README.md  change_image.py  cut_img.py  myapi.js  resize_img.py  to_4bpp.py
img-converter/: CMakeLists.txt  main.c  main.cpp
iosapp/fadingdisplay/fadingdisplay/: AppDelegate.swift  CropViewController.swift  MainViewController.swift  ViewController.swift
iosapp/fadingdisplay/fadingdisplay.xcodeproj/: project.pbxproj
iosapp/fadingdisplay/fadingdisplay.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iosapp/fadingdisplay/fadingdisplay.xcodeproj/xcshareddata/xcschemes/: fadingdisplay.xcscheme
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/aeroplane-airplane-architectural-design-1010079-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/africa-animal-black-and-white-39245-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/aging-black-and-white-homeless-34534-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/aircraft-black-and-white-cold-1867001-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/animal-cat-eyes-33537-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/animals-black-and-white-equine-52500-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/Assets.xcassets/aquatic-plant-beautiful-black-and-white-1563895-out.imageset/: Contents.json
iosapp/fadingdisplay/fadingdisplay/image_processing/: BWKernel.metal  image_processing.swift
iosapp/fadingdisplay/fadingdisplay/request/: request.swift
iosapp/fadingdisplay/fadingdisplayTests/: fadingdisplayTests.swift
iosapp/fadingdisplay/fadingdisplayUITests/: fadingdisplayUITests.swift
js-api/: myapi.js  package-lock.json  package.json
mirror/: fragment.fs  shaderkivy.py
rasp-client/: client.c
rasp-driver/: IT8951.h  Makefile  main.c  setup.sh
(+27 files in other folders)
